tests/fail/elaboration/string-literal/ambiguous.snap
stdout = ''
stderr = '''
error: ambiguous string literal
  ┌─ tests/fail/elaboration/string-literal/ambiguous.fathom:3:1
  │
3 │ "hello"
  │ ^^^^^^^ type annotations needed

'''
